Fixed body tag image tag and contrast issues

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4,7 +4,7 @@ h3.forsale {
 }
 
 #contactForm {
-  color: rgb(37, 92, 119);
+  color: rgb(255, 255, 255);
 }
 
 #inputs {
